--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bower": "^1.7.9",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "forecast": "^0.2.1"
+    "forecast": "^0.2.1",
+    "moment": "^2.13.0"
   }
 }
